deploy/k8s/elk-zerotier-install/zerotier-nat-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerotier-auto-join
  namespace: networking
spec:
  selector:
    matchLabels:
      app: zerotier
  template:
    metadata:
      labels:
        app: zerotier
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8

      containers:
        - name: zerotier
          image: zyclonite/zerotier:router
          securityContext:
            privileged: true  # Needed for network access
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_ADMIN
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: net
              containerPort: 9993
          volumeMounts:
            - name: vol
              subPath: config
              mountPath: /var/lib/zerotier-one
            - name: tun
              mountPath: /dev/net/tun

          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - |
                    [...]
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: zerotier
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
